[package]
name = "advent23"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d1p1"
path = "src/day01/part1.rs"

[[bin]]
name = "d1p2"
path = "src/day01/part2.rs"

[[bin]]
name = "d2p1"
path = "src/day02/part1.rs"

[[bin]]
name = "d2p2"
path = "src/day02/part2.rs"

[[bin]]
name = "d3p1"
path = "src/day03/part1.rs"

[[bin]]
name = "d3p2"
path = "src/day03/part2.rs"

[[bin]]
name = "d4p1"
path = "src/day04/part1.rs"

[[bin]]
name = "d4p2"
path = "src/day04/part2.rs"

[dependencies]
itertools = "0.12.0"
