[package]
name = "advent23"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[[bin]]
name = "d1p1"
path = "src/day01/part1.rs"

[[bin]]
name = "d1p2"
path = "src/day01/part2.rs"

[[bin]]
name = "d2p1"
path = "src/day02/part1.rs"

[[bin]]
name = "d2p2"
path = "src/day02/part2.rs"

[[bin]]
name = "d3p1"
path = "src/day03/part1.rs"

[[bin]]
name = "d3p2"
path = "src/day03/part2.rs"

[[bin]]
name = "d4p1"
path = "src/day04/part1.rs"

[[bin]]
name = "d4p2"
path = "src/day04/part2.rs"

[[bin]]
name = "d5p1"
path = "src/day05/part1.rs"

[[bin]]
name = "d5p2"
path = "src/day05/part2.rs"

[[bin]]
name = "d6p1"
path = "src/day06/part1.rs"

[[bin]]
name = "d6p2"
path = "src/day06/part2.rs"

[[bin]]
name = "d7p1"
path = "src/day07/part1.rs"

[[bin]]
name = "d7p2"
path = "src/day07/part2.rs"

[[bin]]
name = "d8p1"
path = "src/day08/part1.rs"

[[bin]]
name = "d8p2"
path = "src/day08/part2.rs"

[[bin]]
name = "d9p1"
path = "src/day09/part1.rs"

[[bin]]
name = "d9p2"
path = "src/day09/part2.rs"

[[bin]]
name = "d10p1"
path = "src/day10/part1.rs"

[[bin]]
name = "d10p2"
path = "src/day10/part2.rs"

[[bin]]
name = "d11p1"
path = "src/day11/part1.rs"

[[bin]]
name = "d11p2"
path = "src/day11/part2.rs"

[[bin]]
name = "d12p1"
path = "src/day12/part1.rs"

[[bin]]
name = "d12p2"
path = "src/day12/part2.rs"

[[bin]]
name = "d13p1"
path = "src/day13/part1.rs"

[[bin]]
name = "d13p2"
path = "src/day13/part2.rs"

[[bin]]
name = "d14p1"
path = "src/day14/part1.rs"

[dependencies]
cached = "0.46.1"
itertools = "0.12.0"
